--- a/styless.css
+++ b/styless.css
@@ -79,3 +79,7 @@ body {
         text-shadow: 0 0 20px #fff, 0 0 30px #5bff56, 0 0 40px #5bff56, 0 0 50px #5bff56, 0 0 60px #5bff56, 0 0 70px #5bff56, 0 0 80px #5bff56;
     }
 }
+
+.border{
+    border-radius: 4%;
+}
