--- a/styless.css
+++ b/styless.css
@@ -83,3 +83,68 @@ body {
 .border{
     border-radius: 4%;
 }
+.loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.flipping-cards {
+    display: flex;
+    justify-content: space-between;
+    width: 210px; /* Adjust based on the number of cards and their width */
+}
+
+.card {
+    width: 30px;
+    height: 40px;
+    background-color: #FF5C35;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 4px;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+    animation: flip 2s infinite;
+}
+
+.card:nth-child(1) {
+    animation-delay: 0s;
+}
+
+.card:nth-child(2) {
+    animation-delay: 0.3s;
+}
+
+.card:nth-child(3) {
+    animation-delay: 0.6s;
+}
+
+.card:nth-child(4) {
+    animation-delay: 0.9s;
+}
+
+.card:nth-child(5) {
+    animation-delay: 1.2s;
+}
+
+.card:nth-child(6) {
+    animation-delay: 1.5s;
+}
+
+.card:nth-child(7) {
+    animation-delay: 1.8s;
+}
+
+@keyframes flip {
+    0%, 100% {
+        transform: rotateY(0deg);
+    }
+    50% {
+        transform: rotateY(180deg);
+    }
+}
